--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,12 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v2
 
-      # Step to set environment variables from secrets
-      - name: Set Environment Variables
-        run: |
-          touch .env
-          echo "ALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }}" >> .env
-          echo "ALGOLIA_SEARCH_ONLY_API_KEY=${{ secrets.ALGOLIA_SEARCH_ONLY_API_KEY }}" >> .env
-          echo "ALGOLIA_WRITE_API_KEY=${{ secrets.ALGOLIA_WRITE_API_KEY }}" >> .env
-
       - name: Install, build, and upload your site
         uses: withastro/action@v0
+        env:
+          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+          ALGOLIA_SEARCH_ONLY_API_KEY: ${{ secrets.ALGOLIA_SEARCH_ONLY_API_KEY }}
+          ALGOLIA_WRITE_API_KEY: ${{ secrets.ALGOLIA_WRITE_API_KEY }}
 
   deploy:
     needs: build
