Fix accessibility issues

--- a/src/content/champions/toru-shimogaki.yaml
+++ b/src/content/champions/toru-shimogaki.yaml
@@ -23,4 +23,4 @@ activities:
     title: Green Software Trends -- an introduction of the Green Software Foundation
     subtitle: Japanese Language
     url: https://www.ipsj.or.jp/event/seminar/2023/program09.html
-    relatedEvent: "Green Software Introduction for Software Engineer" hosted by IPSJ
+    relatedEvent: \"Green Software Introduction for Software Engineer\" hosted by IPSJ
