--- a/src/content/champions/yelle-lieder.yaml
+++ b/src/content/champions/yelle-lieder.yaml
@@ -16,7 +16,7 @@ social:
   linkedin: lieder
 activities:
   - contributionType: oss contribution
-    linkedGSFProject: Carbon Aware SDK
+    linkedGSFProject: Opensource WG
     subtype: all
     dateFrom: 2023-09-16
     dateTo: 2023-09-16
