Add type field to adel-noureddine.yaml

--- a/src/content/champions/adel-noureddine.yaml
+++ b/src/content/champions/adel-noureddine.yaml
@@ -15,6 +15,7 @@ bio: |
  Lately, he launched the Joular project. aiming to build robust tools to measure and analyze the energy consumption of software.
  He also created a course on Green IT in 2019 at the graduate master level, and a second one on sustainable computing in 2022. He founded a French national working group on green software in 2020, and a series of summer schools on green it since 2021.
  He can be visited at: https://www.noureddine.org/
+type: normal
 social:
   github: adelnoureddine
   linkedin: adelnoureddine
