Add type fields to champions

--- a/src/content/champions/aydin-mir-mohammadi.yaml
+++ b/src/content/champions/aydin-mir-mohammadi.yaml
@@ -12,6 +12,7 @@ bio: "Aydin Mir Mohammadi is a partner and architect at bluehands and has been c
  Aydin is a community enthusiast, founder and organizer of Green Software Development Karlsruhe, initiator of the .NET User Group Karlsruhe, host of #nossued (Community UnConference) and speaker at various conferences and meetups.
  As a producer and entrepreneur as well as a private individual, he takes responsibility for an ecologically sustainable world by promoting climate-friendly and resource-saving applications.
  As a software developer, he has initiated several open source projects and actively drives them forward."
+type: normal
 social:
   github: AydinMirMohammadi
   linkedin: aydin-mir-mohammadi
