--- a/src/content/champions/claire-thornewill.yaml
+++ b/src/content/champions/claire-thornewill.yaml
@@ -10,6 +10,7 @@ pronoun: She/Her
 country: Germany
 city: Munich
 bio: Claire is a Digital Sustainability Lead at Cognizant Netcentric. She works on client projects to optimise web sustainability for client websites. She is in the Sustainability working group at the W3C that have just launched the first draft of the Web Sustainability Guidelines. She is passionate about sustainability in her personal life, which is why she is now on a mission to raise the awareness that digitisation is riasing the carbon footprint of the IT industry.
+type: normal
 social:
   github: cthornewill
   linkedin: claire-thornewill
