--- a/src/content/champions/francois-burra.yaml
+++ b/src/content/champions/francois-burra.yaml
@@ -16,6 +16,7 @@ bio: |
  - I’m a consultant for fruggr: https://www.fruggr.io/fr/, a leading SaaS solution for measuring the environmental and social footprint of digital services and products.
  - I'm a consultant for Hey Low: https://heylow.world/, a leading low-carbon design studio.
  - I help digital teams and companies create and implement their climate playbook and actions on a large scale."
+type: normal
 social:
   github: FrancoisBurra
   linkedin: francoisburra
