--- a/src/content/champions/graeme-clarke.yaml
+++ b/src/content/champions/graeme-clarke.yaml
@@ -11,6 +11,7 @@ bio: |
  Expleo Director of Software | Public Speaker | Author | Software Engineer | Founder Generation X Design | Winner CIO Award 2023 Outstanding IT Contribution to Sustainability
 
  Graeme is constantly getting into trouble by being involved in all sorts of bizarre and wonderful projects in his spare time from writing mobile computer games to designing satellites that explore Outer Space. His favourite character is R2D2 and he actually really has a signed photo from Kenny Baker himself!
+type: normal
 social:
   github: Graeme-Clarke
   linkedin: graeme-clarke-0027349b
