--- a/src/content/champions/james-corscadden.yaml
+++ b/src/content/champions/james-corscadden.yaml
@@ -7,6 +7,7 @@ languages:
 pronoun: He/Him
 country: Northern Ireland
 bio: For the past 3 years I have been working in sustainability software. Specialising in assessment of activities against the UN Sustainable Development Goals. Currently exploring what it means to be sustainable on the internet as a dev and a user.
+type: normal
 social:
   github: corscada
 activities:
