Updating activities for Francois Burra

--- a/src/content/champions/francois-burra.yaml
+++ b/src/content/champions/francois-burra.yaml
@@ -64,3 +64,12 @@ activities:
     description: Software Life Cycle Assessment (SLCA) is gaining attention for its environmental impacts in production, deployment, usage, and disposal. Unlike LCA for physical products, SLCA is still evolving in software. The presentation introduces a practical SLCA approach for code, discussing concepts and tradeoffs for smaller projects. The SLCA process is outlined, analyzing software phases for environmental impacts. Challenges in estimating energy during development are highlighted, proposing a Software Carbon Database for continuous assessment. Deployment’s energy during Docker builds is briefly mentioned. To address usage phase complexities, a middleware solution tracking energy per API call and updating the Software Carbon Database in real-time is proposed. Disposal phase considers energy during software component removal using the Green Metrics Tool. The talk concludes with a contemporary SLCA approach for agile software development. It relies on real-life data, promotes traceability, and can be adopted by development teams for sustainable practices. Recommendations to improve data quality for disposal and delivery phases are discussed.
     url: https://www.green-coding.berlin/talks-and-events/enviroinfo-slca-2023/
     relatedEvent: Enviroinfo
+  - contributionType: writing
+    linkedGSFProject: Community WG
+    subtype: book
+    dateFrom: 2023-04-01
+    dateTo: 2023-04-01
+    title: Co-wrote the Climate Product Management Playbook
+    description: On a mission to enhance product management skills and contribute to the fight against climate change and biodiversity crises.
+    url: http://climateproductleaders.org/
+    relatedEvent: Climate Product Management Playbook
