--- a/src/content/champions/srinivasan-rakhunathan.yaml
+++ b/src/content/champions/srinivasan-rakhunathan.yaml
@@ -13,6 +13,15 @@ social:
   github: srini1978
   linkedin: srinivasanrakhunathan
 activities:
+  - contributionType: speaking
+    linkedGSFProject: Impact Framework (IEF)
+    subtype: conference-talk
+    dateFrom: 2023-11-16
+    dateTo: 2023-11-16
+    title: Overview of Impact Framework
+    description: Co-presented on the talk along with Navveen and Asim
+    url: https://www.youtube.com/watch?v=fGFeHaYtf5A
+    relatedEvent: Decarbonize
   - contributionType: GSF Project Leadership
     linkedGSFProject: Impact Framework (IEF)
     subtype: project-lead
